# ddbs-group-project

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  hadoop.env  main.py  pyproject.toml  redis-standby.conf  redis1.conf  redis2.conf  setup_complete.sh  setup_standby.sh  test_failover.sh
.claude/: settings.local.json
db-generation/: generate_production_data.py  generate_test_data.py
docs/: DELIVERY_CHECKLIST.md  MANUAL.md  PLAN.md  README.md  REPORT_TEMPLATE.md  SCREENSHOT_GUIDE.md  compile_report.sh  report.tex
scripts/: hdfs_upload.sh
services/api/app/: main.py
sql/: schema.sql
src/: __init__.py  config.py
src/cli/: __init__.py  init_db.py  load_data.py  monitor.py  populate_beread.py  populate_popularrank.py  query.py
src/domains/cache/: __init__.py  manager.py
src/domains/monitor/: __init__.py
src/domains/query/: __init__.py  coordinator.py  executor.py  router.py
src/domains/storage/: __init__.py  hdfs_manager.py
