[project]
name = "ddbs-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "fastapi>=0.121.1",
    "hdfs>=2.7.3",
    "minio>=7.2.18",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
